fix: BM25混合检索 + 扫描件检测优化 + docId去重
- HybridRetriever: Dense + BM25 双路检索 + RRF 融合
- Bm25Index: JVM 内存倒排索引，中文逐字分词
- 运营时发布/停用/删除同步更新 BM25 索引
- 扫描件检测: 文本 <100 字符时提示预处理工具
- docId: 时间戳+随机数替代序列号，消除重启冲突
- 前端上传超时 3 分钟
- QdrantCollectionInitializer 精简
- QdrantClientConfig 配置化 host/port